# conTeXt-langServer

./: .gitignore  .pdm-python  DerivativeLicenses.md  Readme.md  package.json  package.json.working  pyproject.toml  testScopeActions
contextLangServer/: cli.py
contextLangServer/context/: contextActions.py
contextLangServer/context/syntax/: context.tmLanguage.json
contextLangServer/langserver/: Readme.md  dispatcher.py  ls1_lifeCycle.py  ls2_documentSync.py  ls3_languageFeatures.py  ls4_workspaceFeatures.py  ls5_windowFeatures.py  lsA_build.py  simpleJsonRpc.py
contextLangServer/processor/: documents.py  grammar.py  scopeActions.py
docs/: ImplementationNotes.md  lspImplementationNotes.md  lspReview.md
jupyter/: ExploreServer.ipynb  Readme.md  setupClient.py
jupyter/.ipynb_checkpoints/: ExploreServer-checkpoint.ipynb  setupClient-checkpoint.py
scripts/: checkForServer  installEditableConTeXt-LangServerCommand  installFromMakeself  pushChanges  updateLocalLpicSyntaxes
src/: context-langserver.js.off  context-langserver.ts
src/actions/: contextActions.mjs
tests/: context.tmLanguage.json  server.py  test_dispatcher.py  test_documents.py  test_grammar.py  test_langServer.py  test_ls1_lifeCycle.py  test_ls2_documentSync.py  test_scopeActions.py  test_simpleJsonRpc.py  utils.py
tests/actions/: someScopeActions.py
tests/client/: client
tests/docs/: test.tex
